--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 <body>
 
 	<div id="message">
-		<p>Sorry! Page not found.</p>
-		<p><a href="http://angelapanwong.com">Go Home?</a><br />
+		<p>sorry! nothing here :-(</p>
+		<p>but here's how to get <a href="http://angelapanwong.com">home</a>.</p>
 	</div>
 
 </body>
