--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
 	<div id="message">
 		<p>sorry! nothing here :-(</p>
-		<p>but here's how to get <a href="http://angelapanwong.com">home</a>.</p>
+		<p>but here's how to get:<a href="http://angelapanwong.com"> home</a>.</p>
 	</div>
 
 </body>
