--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 <body>
 
 	<div id="message">
-		<p>sorry! nothing here :-(</p>
-		<p>but here's how to get:<a href="http://angelapanwong.com"> home</a>.</p>
+		<p>sorry! nothing here&nbsp;&nbsp; :-(</p>
+		<p>but here's how to get:<a href="http://angelapanwong.com"> home</a></p>
 	</div>
 
 </body>
