Update content and spacing

--- a/selectedWorksIndeed/mmwriting.html
+++ b/selectedWorksIndeed/mmwriting.html
@@ -51,6 +51,7 @@
       <div class="row">
          <img class="" src="images/mmwriting01.png">
       </div><!--/row-->
+      &nbsp;
       <div class="row">
          <img class="" src="images/mmwriting10.png">
       </div><!--/row-->
