--- a/selectedWorksIndeed/reef.html
+++ b/selectedWorksIndeed/reef.html
@@ -69,6 +69,7 @@
       <div class="row">
          <img class="" src="images/reef07.png">
       </div><!--/row-->
+      &nbsp;
       <div class="row">
         <img class="" src="images/reef03.png">
       </div><!--/row-->
@@ -83,6 +84,7 @@
       <div class="row">
          <img class="" src="images/reef02.png">
       </div><!--/row-->
+      &nbsp;
       <div class="row">
          <img class="" src="images/reef09.png">
       </div><!--/row-->
