--- a/selectedWorksIndeed/mmwriting.html
+++ b/selectedWorksIndeed/mmwriting.html
@@ -42,7 +42,7 @@
     <div class="section hero">
       <div class="row">
         <div class="six columns">
-          <p>Macmillan had recently acquired a web-based, educational writing tool to help high school teachers facilitate multi-draft writing and peer review. I was brought in on the project as the lead designer from Theresa Neil Strategy &amp; Design to work with the internal product and engineering team and redesign the tool for first-year college composition students and integrate the experience into their umbrella learning platform. </p>
+          <p>Macmillan had recently acquired a web-based, educational writing tool to help high school teachers facilitate multi-draft writing and peer review. I was brought in on the project as the lead designer from Theresa Neil Strategy &amp; Design to work with the internal product and engineering team and redesign the tool for first-year college composition students, integrating the experience into Macmillan&rsquo;s umbrella learning platform. </p>
         </div>
         <div class="six columns">
           <p>As this learning platform was still in transition and the team was fairly new to having a dedicated designer, they needed help with how the design and research process would work with the overall goals and timeline of product development. I worked with the product team to craft a UX roadmap to ensure we were designing iteratively and testing with users, while hitting the important cross-functional team milestones.</p>
@@ -77,7 +77,7 @@
       <h3>Instructor Feedback</h3>
       <div class="row">
         <div class="six columns">
-          <p>The instructor feedback tool is a core component and went through several concept test iterations to reflect writing pedagogy in a way that was flexible for experienced instructors but could also provide guidance for newer writing instructors.</p>
+          <p>The instructor feedback tool is a core component and went through several concept test iterations to reflect writing pedagogy in a way that was flexible for experienced instructors but could also provide guidance for newer teacher and TAs.</p>
         </div>
         <div class="six columns">
           <p>We had to strike the right balance and emphasis between formative, higher-order feedback and the more tactical copy editing and grammatical instruction.</p>
@@ -98,10 +98,10 @@
       <h3>Instructor Assignment Creation</h3>
       <div class="row">
         <div class="six columns">
-          <p>When creating a writing assignment, it was important that the instructors could visualize what the students were going to see while creating content. We used a more modular approach so instructors could directly edit the student template.</p>
+          <p>When creating a writing assignment, it was important that the instructors could visualize what the students were going to see. We used a more modular approach so instructors could directly edit the student template.</p>
         </div>
         <div class="six columns">
-          <p>We also tested different ways to represent the relationship between the summative rubric scoring and formative draft goals.</p>
+          <p>We also tried different ways to represent the relationship between the summative rubric scoring and formative draft goals. These were tested via a RITE study to quickly move the designs forward while validating with users.</p>
         </div>
       </div><!--/row-->
       <div class="row">
@@ -119,10 +119,10 @@
       <h3>Student Drafting &amp; Revising</h3>
       <div class="row">
         <div class="six columns">
-          <p>For students, we focussed on task completion and the ability to comprehend the multi-step process in draft revision and peer review. We also had to redirect an over focus on grades to encourage experimentation and reflection significant in higher education writing courses.</p>
+          <p>For students, we focussed on task completion and the ability to comprehend the multi-step process in draft revision and peer review. We also had to redirect an over focus on grades to encourage experimentation and reflection significant in higher education writing pedagogy.</p>
         </div>
         <div class="six columns">
-          <p>Though mobile was considered for all experiences in the tool, it was clear through interviews that the main opportunity for mobile would be for students. Though most would not be drafting their papers on their phone, students were pleased to be able to review assignments, feedback, and provide short answer reflections on-the-go.</p>
+          <p>Though mobile was considered for all experiences in the tool, it was clear through interviews that the main opportunity would be for students. Though most would not be drafting their papers on their phone, students were pleased to be able to review assignments, gather feedback, and provide short answer reflections on-the-go.</p>
         </div>
       </div><!--/row-->
       <div class="row">
@@ -137,7 +137,7 @@
     </div><!--/section iteration-->
 
     <div class="section results lastSection">
-    <p>Through each phase of testing and design, I coordinated with the engineering team, providing production assets and helping to establish a design to development workflow. I eventually handed the project off to another member of the TNSD team.</p>
+    <p>Through each phase of testing and design, I coordinated with the engineering team, providing production assets and helping to establish a design-to-development workflow. I eventually handed the project off to another member of the TNSD team.</p>
     </div><!--/section results-->
 
   </div><!--/container-->
