--- a/selectedWorksIndeed/products.html
+++ b/selectedWorksIndeed/products.html
@@ -38,7 +38,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <h1>RetailMeNot Products Research</h1>
-    
+
     <div class="section hero">
       <div class="six columns">
       <p>Though RetailMeNot's focus is coupons, user research had shown that more top-of-the-funnel deal seeking happened at the product level. We did not yet have a good grasp on the behavior of shopping for deals and how RetailMeNot fit into the journey.</p>
@@ -48,11 +48,11 @@
       </div>
     </div><!--/section hero-->
 
-  
+
     <div class="section mocks">
       <h3>Round 1</h3>
       <div class="six columns">
-        <p><strong>Version A (Deals Deals Deals!)</strong> represented a deals-first approach, where the user feels like theyre getting the lowest of the best -- somewhat like sifting through a bargain bin. Content strategy would focus on high value with big deals or low price-point essentials. This design would target impulse purchases with loud social proof cues and limited time and quantity messaging.</p>
+        <p><strong>Version A (Deals Deals Deals!)</strong> represented a deals-first approach, where the user feels like theyre getting the lowest of the best &mdash; somewhat like sifting through a bargain bin. Content strategy would focus on high value with big deals or low price-point essentials. This design would target impulse purchases with loud social proof cues and limited time and quantity messaging.</p>
       </div>
       <div class="six columns">
         <p>For each of these concepts, we worked from low-fidelity sketch to code. We sat down and brainstormed ideas, I would synthesize the approach in sketch format, and Lance would build out the architecture. For more detailed information elements, I wireframed individual components that would be used modularly</p>
@@ -66,7 +66,7 @@
         <p><strong>Version B (Shopping as an Experience)</strong> represented a more products-first approach. We wanted users to feel as though they were shopping on RetailMeNot. This version organized products around trend and style collections to observe how users responded to RetailMeNot asserting authority as a tastemaker.</p>
         </div>
         <div class="six columns">
-        <p>Collections would have a more controlled aesthetic, with merchants secondary. This version would also contain full-priced content, assuming users who were evaluating purchased based on the products, they would not want selection to be limited. A Sales Alert functionality was added to these items.</p>
+        <p>Collections would have a more controlled aesthetic, with merchants secondary. This version would also contain full-priced content, assuming users who were evaluating purchases based on the products and would not want selection to be limited. A sales alert functionality was added to these items.</p>
         </div>
       </div><!--/row-->
       <div class="row">
@@ -78,7 +78,7 @@
           <p><strong>Version C (Best Price)</strong> represented a price-first approach. This version would include price comparison across multiple merchants.</p>
         </div>
         <div class="six columns">
-          <p>If a users found a particular shoe they wanted, they could find the best deal on RetailMeNot across different merchants with coupons applied.</p>
+          <p>If a user found a particular shoe they wanted, they could find the best deal on RetailMeNot across different merchants with coupons applied.</p>
         </div>
       </div><!--/row-->
       <div class="row">
@@ -87,10 +87,10 @@
       </div><!--/row-->
       <div class="row">
         <div class="six columns">
-        <p>Research revealed that majority of users started at Google and would expect to engage RetailMeNot after they had found something specific they wanted and was looking for a good deal.The Best Price promise resonated well with this expectation and would potentially make users reconsider decisions about products.</p>
+        <p>Research revealed that majority of users started at Google and would expect to engage RetailMeNot after they had found something specific and were looking for a good deal. The Best Price promise resonated well with this expectation and would potentially make users reconsider decisions about products.</p>
         </div>
         <div class="six columns">
-        <p>Though users often got overwhelmed by choices when deciding on a particular product, they could not see RetailMeNot as an authority on what to buy from quality and trend perspective. They were also off-put by randomness of content, even if the deals were of high value.</p>
+        <p>Though users often got overwhelmed by choices when deciding on a particular product, they could not see RetailMeNot as an authority on what to buy from a quality and trend perspective. They were also off-put by the randomness of content &mdash; even if the deals were of high value.</p>
         </div>
       </div><!--/row-->
     </div><!--/section iteration-->
@@ -99,10 +99,10 @@
       <h3>Round 2</h3>
       <div class="row">
         <div class="six columns">
-        <p>This second round of research we combined the feedback from the previous study with varying focuses in different parts of the site. We leveraged our learning about search behavior, and imagined the entry point as a category search landing. A user searching on google for product would land on RetailMeNot with all matching products. Users could compare prices from multiple merchants for each product and set a sale alert.</p>
+        <p>This second round of research we combined the feedback from the previous study with varying focuses in different parts of the site. We leveraged our learning about search behavior, and imagined the entry point as a category search landing. A user searching on Google for a product would land on RetailMeNot with all matching products. Users could compare prices from multiple merchants for each product and set a sales alert.</p>
         </div>
         <div class="six columns">
-        <p>Instead of collections, subcategories would promote discovery. For low consideration purchases, we introduced a "Top Ten" concept. We took users through different three different scenarios -- A high consideration purchase (iPad), a mid consideration purchase that was influenced by style (laptop bag), and low consideration purchase (hand-held vacuums).</p>
+        <p>Instead of collections, subcategories would promote discovery. For low consideration purchases, we introduced a &ldquo;Top Ten&rdquo; concept. We took users through different three different scenarios &mdash; a high consideration purchase (iPad), a mid consideration purchase that was influenced by style (laptop bag), and a low consideration purchase (hand-held vacuum).</p>
         </div>
       </div><!--/row-->
       <div class="row">
@@ -130,7 +130,7 @@
         <img class="" src="images/products14.png">
       </div><!--/row-->
     </div><!--/section results-->
-  
+
   </div><!--/container-->
 
 <!-- End Document
