--- a/selectedWorksIndeed/rmnShoppingApp.html
+++ b/selectedWorksIndeed/rmnShoppingApp.html
@@ -38,7 +38,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <h1>RetailMeNot Shopping App</h1>
-    
+
     <div class="section hero">
       <div class="row">
         <div class="six columns">
@@ -53,7 +53,7 @@
       </div><!--/row-->
     </div><!--/section hero-->
 
-  
+
     <div class="section mocks">
       <h3>Round 1 Testing</h3>
       <div class="row">
@@ -80,8 +80,8 @@
       <div class="six columns">
         <p>Finally, to get a quick sense of people's emotional response to color, imagery, typography, we showed users variations of collection tiles.</p>
       </div>
-      <div class="six columns"> 
-        <p>Did certain approaches feel more high-end? Do more editorial elements change the way people think about this concent? Do these look like ads?</p>
+      <div class="six columns">
+        <p>Did certain approaches feel more high-end? Do more editorial elements change the way people think about this content? Do these look like ads?</p>
       </div>
        <div class="row">
         <img class="" src="images/shoppingApp04.png">
@@ -98,12 +98,14 @@
 
      <div class="section mocks">
       <h3>Round 2 Testing</h3>
-      <div class="six columns">
-        <p>In this next test we brought the prototype into higher interactive fidelity, allowing users to explore full collections of content and move about the app freely. We established that the experience would be about "treating yo' self", provide guilt-free browsing, be content first (feel "navigation-less"), and when possible, surprise and delight.</p>
-      </div>
-      <div class="six columns">
-        <p>Both versions would be standalone apps, one RetailMeNot branded and the other independent. Version A, was organized by collections that were trend and theme-based. We pushed farther the affective quality by playing with color, imagery, and texture. Version B would be RetailMeNot branded and be all about quick, lightweight ways to consume content.</p>
-      </div>
+      <div class="row">
+        <div class="six columns">
+          <p>In this next test we brought the prototype into higher interactive fidelity, allowing users to explore full collections of content and move about the app freely. We established that the experience would be about "treating yo' self", provide guilt-free browsing, be content first (feel "navigation-less"), and when possible, surprise and delight.</p>
+        </div>
+        <div class="six columns">
+          <p>Both versions would be standalone apps, one RetailMeNot branded and the other independent. Version A, was organized by collections that were trend and theme-based. We pushed farther the affective quality by playing with color, imagery, and texture. Version B would be RetailMeNot branded and be all about quick, lightweight ways to consume content.</p>
+        </div>
+      </div><!--/row-->
       <div class="row">
         <img class="" src="images/shoppingApp05.png">
       </div><!--/row-->
@@ -111,25 +113,27 @@
       <div class="row">
         <img class="" src="images/shoppingApp06.png">
       </div><!--/row-->
-      
+
       <div class="row">
         <div class="six columns">
-         <p>User feedback was very positive. We observed users naturally shopping in the app and getting excited about the deals they were finding. We found that both approaches met a different need for users.</p>
+         <p>User feedback was very positive. We observed users naturally shopping in the app and getting excited about the deals they were finding. Both approaches met a different need for users.</p>
          </div>
         <div class="six columns">
-         <p>However, users' primary behavior was to shop to buy and the category filtered product feed facilitated this well. Collections served a secondary need to keep up with trends and discover new styles.</p>
+         <p>However, users&rsquo; primary behavior was to shop to buy and the category filtered product feed facilitated this well. Collections served a secondary need to keep up with trends and discover new styles.</p>
         </div>
       </div><!--/row-->
     </div><!--/section iteration-->
 
     <div class="section mocks">
       <h3>Round 3 Testing</h3>
-      <div class="six columns">
-        <p>This final round of testing combines our learnings and will support how we approach a pilot recommendation. We combined the product feed and collections and further fleshed out the checkout process.</p>
-      </div>
-      <div class="six columns">
-        <p>We wanted to address the confusion around multiple merchants how fulfillment works. This test digs deeper into the mental models users have around buying through a third party content provider. </p>
-      </div>
+      <div class="row">
+        <div class="six columns">
+          <p>This final round of testing combines our learnings and will support how we approach a pilot recommendation. We combined the product feed and collections and further fleshed out the checkout process.</p>
+        </div>
+        <div class="six columns">
+          <p>We wanted to address the confusion around multiple merchants and how fulfillment works. This test digs deeper into the mental models users have around buying through a third party content provider. </p>
+        </div>
+      </div><!--/row-->
       <div class="row">
         <img class="" src="images/shoppingApp07.png">
         <img class="" src="images/shoppingApp08.png">
@@ -142,7 +146,7 @@
     <div class="section results lastSection">
     <p>This series of test were successful in confirming the viability of this concept and next steps will be to design out the pilot to test in market.</p>
     </div><!--/section results-->
-  
+
   </div><!--/container-->
 
 <!-- End Document
