--- a/selectedWorksAutomattic/index.html
+++ b/selectedWorksAutomattic/index.html
@@ -64,7 +64,7 @@
     </div><!--/row-->
     <div class="row">
       <div class="four columns">
-        <a class="thumb" href="groupread.html"><img src="images/thumb-groupread.png"><span class="title">GroupRead</span></a>
+        <a class="thumb" href="groupRead.html"><img src="images/thumb-groupRead.png"><span class="title">GroupRead</span></a>
       </div>
     </div><!--/row-->
 
